--- a/contact-us.html
+++ b/contact-us.html
@@ -12,19 +12,7 @@
         <section>
             <article style="background-color: #212121;">
                 <h2>
-                    <center>Mark!</center>
-                </h2>
-                <div>
-                    <ul type="square">
-                        <li>
-                            <p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>@Marcogames1973#7391</p>
-                        </li>
-                    </ul>
-                </div>
-            </article>
-            <article style="background-color: #212121;">
-                <h2>
-                    <center>Mary!</center>
+                    <center>Social Media</center>
                 </h2>
                 <div>
                     <ul type="square">
@@ -49,13 +37,13 @@
             <article style="background-color: #212121;">
                 <div>
                     <h2>
-                        <center>Access our YouTube page!</center>
+                        <center>YouTube</center>
                     </h2>
                     <center>
                         <p><img src="images/social-media/yt.png" alt="YouTube" width="64px" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p>
                     </center>
                     <h2>
-                        <center>Join our Discord and chat!</center>
+                        <center>Join Discord</center>
                     </h2>
                     <p style="text-align: center;"><iframe src="https://discordapp.com/widget?id=726461107191021629&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></p>
                 </div>
@@ -65,7 +53,7 @@
             <article style="background-color: #212121;">
                 <div>
                     <h2>
-                        <center>Join Mary in Minecraft!</center>
+                        <center>Minecraft Server</center>
                     </h2>
                     <center>
                         <p><img src="images/social-media/minecraft.png" alt="Minecraft" width="64px" height="64px" align=center>Join the Discord to find out more!</p>
