--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <header class="text">
             <!-- Main Introduction -->
             <h1>
-                <center>Mark and Mary</center>
+                <center>Mary McMurray</center>
             </h1>
             <h2>
-                <center>Visual artists</center>
+                <center>Visual artist</center>
             </h2>
             <h3>
-                <center>Welcome to our site!</center>
+                <center>Welcome to my site!</center>
             </h3>
             <hr/>
             <nav>
@@ -29,9 +29,9 @@
                         <ul id="horizontal-list">
                             <li><a class="active" href="home.html" target="main-display">Home</a></li>
                             <li><a class="inactive" href="portfolio.html" target="main-display">Portfolio</a></li>
-                            <li><a class="inactive" href="Classes/cgt/cgt116.html" target="main-display">CGT116</a></li>
-                            <li><a class="inactive" href="Classes/tech120/tech120.html" target="main-display">TECH120</a></li>
-                            <li><a class="inactive" href="contact-us.html" target="main-display">Contact us!</a></li>
+                            <!--<li><a class="inactive" href="Classes/cgt/cgt116.html" target="main-display">CGT116</a></li>
+                            <li><a class="inactive" href="Classes/tech120/tech120.html" target="main-display">TECH120</a></li> -->
+                            <li><a class="inactive" href="contact-us.html" target="main-display">Contact</a></li>
                         </ul>
                     </div>
                 </div>
