--- a/portfolio.html
+++ b/portfolio.html
@@ -9,42 +9,23 @@
 <body style="background-color:#212121;">
 
     <article>
+        <h3 style="text-align: center;">My Portfolio</h3>
         <table style="width: 100%;">
-            <tr>
-                <th>Mark</th>
-                <th>Mary</th>
-            </tr>
-            <tr>
                 <td>
-                    <h2 style="text-align: center;">Minecraft Render</h2>
-                    <div style="text-align: center;">
-                        <img src="images/renders/Ronder.png" alt="A render using visual effects and lighting." width="640" height="360"></div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <h2 style="text-align: center;">CGT week 2 assignment</h2>
-                    <div style="text-align: center;">
-                        <img src="images/renders/building-block-out.png" alt="Buidlings Render" width="640" height="480"></div>
-                </td>
-                <td>
+                    <h2 style="text-align: center;">Apple render for fun</h2>
+                    <p style="text-align: center;">
+                        <img src="images/renders/apple_render.png" alt="Apples in a metallic bowl" width="768" height="432"></p>
                     <h2 style="text-align: center;">SOLO Meme Animation</h2>
                     <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q8KLAUoPTBg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <h2 style="text-align: center;">CGT116 week 1 model</h2>
-                    <p style="text-align: center;">
-                        <img src="images/renders/signature-render.png" alt="A signature for Mark" width="640" height="480">
-                </td>
-                <td>
                     <h2 style="text-align: center;">A drawing for fun</h2>
                     <p style="text-align: center;">
                         <img src="images/drawings/mary-drawing.png" alt="A gift for a friend" width="625" height="705">
                     </p>
                 </td>
-            </tr>
         </table>
     </article>
 
