--- a/home.html
+++ b/home.html
@@ -10,33 +10,13 @@
     <main>
         <article>
             <section>
-                <div style="background-color: #212121;">
-                    <h4>
-                        About Mark
-                    </h4>
-                    <p style="color:white;">
-                        Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. Currently I am learning how to create realistic 3D models.
-                    </p>
-                    <p>
-                        To the right is an animation I made for the fun of it.
-                    </p>
-                </div>
-            </section>
-            <section>
-                <di class="right-video">
-                    <p style="text-align:right;"><iframe width="560" height="315" src="https://www.youtube.com/embed/j_ZsjtnJaiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-                </di>
-            </section>
-
-
-            <section>
                 <article>
                     <div style="background-color: #212121;">
                         <h4>
-                            About Mary
+                            About me
                         </h4>
                         <p>
-                            Hi everyone! I am a visual designer who makes logos, art, and 3D renders with Mark's stuff!
+                            Hi everyone! I am a visual designer who makes logos, art, and 3D renders!
                         </p>
                         <p>
                             The background of this site was made by me!
