Edited Embed description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="indexcss.css">
     <meta charset="UTF=8">
-    <meta name="description" content="Marco and Mary's Basic Portfolio">
+    <meta name="description" content="Mary's Basic Portfolio">
     <meta name="viewport" content="width-device-width, initial-scale=1">
     <title>Marco and Mary's Portfolio Homepage</title>
 </head>
