Updated contact youtube

--- a/contact-us.html
+++ b/contact-us.html
@@ -40,7 +40,7 @@
                         <center>YouTube</center>
                     </h2>
                     <center>
-                        <p><img src="images/social-media/yt.png" alt="YouTube" width="64px" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p>
+                        <p><img src="images/social-media/yt.png" alt="YouTube" width="64px" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Maryplays57</a></p>
                     </center>
                     <h2>
                         <center>Join Discord</center>
