--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF=8">
     <meta name="description" content="Mary's Basic Portfolio">
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <title>Marco and Mary's Portfolio Homepage</title>
+    <title>Mary's Portfolio Homepage</title>
 </head>
 
 <body>
